# pd-mcp-server

./: .gitignore  .mcp.json  .mcpbignore  CHANGELOG.md  README.md  claude_desktop_config.example.json  manifest.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release-mcpb.yml
pd/: mcp_host.pd
pd/scripts/: test_add.py  test_stats.py  teststats.pd_py
puredata_mcp/: __init__.py  builders.py  fudi.py  guide.py  patch_state.py  pd_diff.py  pd_serialize.py  server.py  templates.py  versioning.py
skills/puredata/: SKILL.md
tests/: mock_pd.py  test_builders.py  test_fudi.py  test_patch_state.py  test_pd_diff.py  test_pd_serialize.py  test_presets.py  test_project_scope.py  test_replay.py  test_session_autosave.py  test_templates.py  test_versioning.py
